[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = {version = "0.6.20", features = ["multipart"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tower-http = {version = "0.4.4", features = ["full"]}
mongodb = {version= "^2.4", features= ["tokio-runtime"] }
futures-util = "0.3.28"
axum-server = {version= "0.5.1", features= ["tls-openssl"]}