[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = {version = "^0.7.0", features = ["multipart", "ws"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tower-http = {version = "^0.5.0", features = ["full"]}
mongodb = {version= "^2.4", features= ["tokio-runtime"] }
futures-util = "0.3.28"
axum-server = {version= "^0.6.0", features= ["tls-rustls"]}
libp2p = {version= "^0.53", features = ["full"]}
sp-core = "^30.0"
serde_with = "^3.3"
rust_decimal = "^1.33"
tokio-stream = "0.1.15"
futures = "0.3.30"
async-stream = "0.3.5"
tokio-tungstenite = "0.21.0"